--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts-ts": "^4.0.8"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "set HTTPS=true && react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
