--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-responsive-modal": "^3.5.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^4.0.8"
